--- a/DabeSoft.A1/DabeSoft.A1.csproj
+++ b/DabeSoft.A1/DabeSoft.A1.csproj
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DA0B2248-EC54-4884-BE24-8C9EC7916994}</ProjectGuid>
+    <ProjectGuid>{B48B7554-14B2-4503-9F7F-A0B77C336528}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dabesoft.Xmltv</RootNamespace>
-    <AssemblyName>Dabesoft.Xmltv</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>DabeSoft.A1</RootNamespace>
+    <AssemblyName>DabeSoft.A1</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -44,15 +44,26 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\ShowInfo.cs" />
-    <Compile Include="XmlTvGenerator.cs" />
+    <Compile Include="AndroidWebClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Facade.cs" />
+    <Compile Include="Models\Class1.cs" />
+    <Compile Include="Models\TvData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="A1Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AndroidWebClient.resx">
+      <DependentUpon>AndroidWebClient.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
